--- a/SchultzHanson.Web/SchultzHanson.Web.csproj
+++ b/SchultzHanson.Web/SchultzHanson.Web.csproj
@@ -193,9 +193,9 @@
     <Content Include="Global.asax" />
     <None Include="Properties\PublishProfiles\schultzhanson - FTP.pubxml" />
     <None Include="Properties\PublishProfiles\schultzhanson - Web Deploy.pubxml" />
-    <None Include="Scripts\jquery-1.8.2.intellisense.js" />
-    <Content Include="Scripts\jquery-1.8.2.js" />
-    <Content Include="Scripts\jquery-1.8.2.min.js" />
+    <None Include="Scripts\jquery-1.9.0.intellisense.js" />
+    <Content Include="Scripts\jquery-1.9.0.js" />
+    <Content Include="Scripts\jquery-1.9.0.min.js" />
     <Content Include="Scripts\jquery-ui-1.9.0.js" />
     <Content Include="Scripts\jquery-ui-1.9.0.min.js" />
     <Content Include="Web.config" />
@@ -206,6 +206,7 @@
       <DependentUpon>Web.config</DependentUpon>
     </Content>
     <Content Include="Views\Web.config" />
+    <Content Include="Scripts\jquery-1.9.0.min.map" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
